--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
 
-        <activity android:name=".UI.StepDetailActivity" />
+        <activity
+            android:name=".UI.StepDetailActivity"
+            android:parentActivityName=".UI.MasterListActivity"/>
+
 
         <receiver android:name=".Widget.RecipeWidgetProvider">
             <intent-filter>
@@ -37,6 +40,16 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/recipe_widget_provider_info" />
         </receiver>
+
+        <provider
+            android:name="com.example.maola.bakingapp.database.RecipeProvider"
+            android:authorities="com.maola.bakingapp.app"
+            android:exported="true"
+            android:syncable="true"/>
+
+        <service
+            android:name=".Widget.RecipeWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
     </application>
 
